<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button_layout"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="0dp"
        android:hint="@string/dummyvalue"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="64sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#6F6F70"
        android:layout_alignParentBottom="true"
        android:id="@+id/Button_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:onClick="AcEvent"
                android:layout_width="100dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="20sp"
                android:layout_margin="12dp"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:backgroundTint="#B30707"
                android:id="@+id/button_Ac"/>
            <Button
                android:onClick="backspace"
                android:layout_width="100dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="C"
                android:textColor="@color/white"
                android:backgroundTint="#E80606"
                android:id="@+id/button_C"/>

            <Button
                android:onClick="OperatorsEvent"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:backgroundTint="#FF9800"
                android:id="@+id/button_devide"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:onClick="numberCLick"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:backgroundTint="#2196F3"
                android:id="@+id/button_7"/>
            <Button
                android:onClick="numberCLick"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:backgroundTint="#2196F3"
                android:id="@+id/button_8"/>
            <Button
                android:onClick="numberCLick"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:backgroundTint="#2196F3"
                android:id="@+id/button_9"/>
            <Button
                android:onClick="OperatorsEvent"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/multi"
                android:textColor="@color/white"
                android:backgroundTint="#FF9800"
                android:id="@+id/button_multiply"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:onClick="numberCLick"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:backgroundTint="#2196F3"
                android:id="@+id/button_4"/>
            <Button
                android:onClick="numberCLick"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:backgroundTint="#2196F3"
                android:id="@+id/button_5"/>
            <Button
                android:onClick="numberCLick"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:backgroundTint="#2196F3"
                android:id="@+id/button_6"/>

            <Button
                android:onClick="OperatorsEvent"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/subtration"
                android:textColor="@color/white"
                android:backgroundTint="#FF9800"
                android:id="@+id/button_subtract"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:onClick="numberCLick"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:backgroundTint="#2196F3"
                android:id="@+id/button_1"/>
            <Button
                android:onClick="numberCLick"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:backgroundTint="#2196F3"
                android:id="@+id/button_2"/>
            <Button
                android:onClick="numberCLick"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:backgroundTint="#2196F3"
                android:id="@+id/button_3"/>
            <Button
                android:onClick="OperatorsEvent"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/addition"
                android:textColor="@color/white"
                android:backgroundTint="#FF9800"
                android:id="@+id/button_add"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="horizontal">

            <Button
                android:onClick="numberCLick"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:backgroundTint="#2196F3"
                android:id="@+id/button_0"/>
            <Button
                android:onClick="numberCLick"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:backgroundTint="#2196F3"
                android:id="@+id/button_dot"/>
            <Button
                android:onClick="EqualBtn"
                android:layout_width="180dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:layout_margin="12dp"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:backgroundTint="#FF9800"
                android:id="@+id/button_equal"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>